--- a/styles/general.less
+++ b/styles/general.less
@@ -1,8 +1,8 @@
-atom-text-editor::shadow {
-	.support.class,
-	.entity.name.class,
-	.entity.name.type.class,
-	.variable.language.this.js {
+atom-text-editor {
+	.syntax--support.syntax--class,
+	.syntax--entity.syntax--name.syntax--class,
+	.syntax--entity.syntax--name.syntax--type.syntax--class,
+	.syntax--variable.syntax--language.syntax--this.syntax--js {
 		font-style: italic;
 	}
 }
