Fixed Pug Tagname

--- a/styles/base.less
+++ b/styles/base.less
@@ -343,7 +343,13 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 		}
 	}
 }
-.syntax--entity {
+
+.syntax--source.syntax--tag {
+	color: @red;
+}
+
+.syntax--entity,
+.entity {
 	&.syntax--name.syntax--function {
 		color: @light-blue;
 	}
