Fixed Panda Syntax for Atom v1.13

--- a/styles/base.less
+++ b/styles/base.less
@@ -82,7 +82,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 			}
 		}
 		&.syntax--jade,
-        &.syntax--pug {
+		&.syntax--pug {
 			&.syntax--include {
 				color: @green;
 			}
@@ -113,27 +113,27 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 		&.syntax--php.syntax--class {
 			color: @orange;
 		}
-        &.syntax--quantifier.syntax--regexp {
-            color: @light-orange;
-        }
+		&.syntax--quantifier.syntax--regexp {
+			color: @light-orange;
+		}
 	}
-    &.syntax--other {
-        &.syntax--important {
-    		color: lighten(@red, 6%);
-    	}
-        &.syntax--special-method {
-    		color: @blue;
-    	}
-        &.syntax--unit {
-    		color: @orange;
-    	}
-        &.syntax--ini {
-    		color: @red;
-    	}
-        &.syntax--default.syntax--scss {
-    		color: @red;
-    	}
-    }
+	&.syntax--other {
+		&.syntax--important {
+			color: lighten(@red, 6%);
+		}
+		&.syntax--special-method {
+			color: @blue;
+		}
+		&.syntax--unit {
+			color: @orange;
+		}
+		&.syntax--ini {
+			color: @red;
+		}
+		&.syntax--default.syntax--scss {
+			color: @red;
+		}
+	}
 }
 .syntax--storage {
 	color: @orange;
@@ -169,7 +169,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 	&.syntax--id {
 		&.syntax--tag {
 			&.syntax--pug,
-            &.syntax--jade {
+			&.syntax--jade {
 				color: @light-blue;
 			}
 		}
@@ -286,9 +286,9 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 			font-style: italic;
 		}
 		&.syntax--tag {
-            &.syntax--html {
-                color: @light-orange;
-            }
+			&.syntax--html {
+				color: @light-orange;
+			}
 			&.syntax--jsx {
 				color: @orange;
 			}
@@ -311,9 +311,9 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 			}
 		}
 	}
-    &.syntax--terminator.syntax--statement.syntax--js {
+	&.syntax--terminator.syntax--statement.syntax--js {
 		color: @syntax-text-color;
-    }
+	}
 }
 .syntax--support {
 	&.syntax--class {
@@ -348,8 +348,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 	color: @red;
 }
 
-.syntax--entity,
-.entity {
+.syntax--entity {
 	&.syntax--name.syntax--function {
 		color: @light-blue;
 	}
@@ -401,9 +400,9 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 			color: @syntax-text-color;
 		}
 	}
-    &.syntax--delimiter.syntax--comma.syntax--js {
+	&.syntax--delimiter.syntax--comma.syntax--js {
 		color: @syntax-text-color;
-    }
+	}
 	&.syntax--separator {
 		background-color: @gray;
 		color: @syntax-text-color;
@@ -417,12 +416,12 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 		}
 	}
 	&.syntax--function {
-        &.syntax--parameters.syntax--js {
-            .syntax--variable.syntax--other.syntax--readwrite.syntax--js {
-			    font-style: italic;
-                color: @lighter-gray;
-            }
-        }
+		&.syntax--parameters.syntax--js {
+			.syntax--variable.syntax--other.syntax--readwrite.syntax--js {
+				font-style: italic;
+				color: @lighter-gray;
+			}
+		}
 		&.syntax--arguments {
 			font-style: italic;
 		}
@@ -483,7 +482,7 @@ atom-text-editor .search-results .syntax--marker.current-result .region {
 }
 
 .cursors .cursor {
-    border-color: @red !important;
+	border-color: @red !important;
 }
 atom-text-editor .scroll-view,
 atom-text-editor[mini] .scroll-view {
